<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
            android:id="@+id/mine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/name_mine_organisation"
            android:textSize="22sp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:tag="1"
            android:background="?selectableItemBackground"
            android:drawableLeft="@drawable/ic_blue_dot"
            android:drawablePadding="6dp"
            android:text="@string/marker_item_previous_reports"
            android:textColor="@color/blue_link"
            android:textSize="16sp"/>

    <TextView
            android:id="@+id/txv_goto_mine_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:tag="2"
            android:drawableLeft="@drawable/ic_blue_dot"
            android:background="?selectableItemBackground"
            android:drawablePadding="6dp"
            android:text="@string/marker_item_goto_mine_map"
            android:textColor="@color/blue_link"
            android:textSize="16sp"/>

</LinearLayout>