<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/rel_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#dce6ef"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

        <TextView
                android:id="@+id/title_org"
                style="?android:textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/name_mine_organisation"/>

        <TextView
                android:id="@+id/title_mine"
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_below="@+id/title_org"
                android:layout_marginBottom="10dp"
                android:text="@string/name_cave"/>

        <Spinner
                android:id="@+id/spinner_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/txv_geo_location"
                />

        <Button
                android:id="@+id/btn_record_location"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:background="@color/inspection_button_blue"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:padding="12dp"
                android:layout_margin="12dp"
                android:text="@string/button_record_location"
                android:textColor="@color/white"
                android:textSize="14sp"/>

        <TextView
                android:id="@+id/txv_geo_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/btn_record_location"
                android:text="@string/text_geo_location"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>
    </RelativeLayout>

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/rel_controls"
            android:layout_centerHorizontal="true"
            android:background="@color/container_capture_photo_bg"
            android:padding="12dp">

        <ImageView
                android:id="@+id/imv_camera_capture"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom">

            <EditText
                    android:layout_alignParentLeft="true"
                    android:id="@+id/edt_note"
                    android:layout_marginRight="15dp"
                    android:layout_alignTop="@+id/btn_scribble"
                    android:layout_toLeftOf="@+id/btn_scribble"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btn_cancel"
                    android:gravity="start"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/text_hint_capture_note"
                    android:padding="5dp"/>

            <Button
                    android:id="@+id/btn_scribble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btn_save"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ic_scribble"/>

            <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ic_cancel"/>

            <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btn_cancel"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_save"/>
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>